--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/pwa-192x192.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CabMate</title>
-  </head>
+    <link rel="manifest" href="/manifest.webmanifest" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CabMate</title>
+  
+  <link rel="icon" type="image/png" href="/pwa-192x192.png?v=2" />
+  <link rel="apple-touch-icon" href="/pwa-192x192.png?v=2" />
+  
+  <meta name="theme-color" content="#ffffff" />
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
