--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   
   <link rel="icon" type="image/png" href="/pwa-192x192.png?v=2" />
   <link rel="apple-touch-icon" href="/pwa-192x192.png?v=2" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
   
   <meta name="theme-color" content="#ffffff" />
 </head>
