--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://feedbackpulse.onrender.com/widget.js?key=fp_Snv3Z3wXka" async></script>
   </body>
 </html>
