--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://feedbackpulse.onrender.com/widget.js?key=fp_Snv3Z3wXka" async></script>
+<script src="https://feedbackpulse.onrender.com/widget.js?key=fp_CUm_QmFQWV&icon=mail&text=Feedback&primary=%23E76ECD&textColor=%23FFFFFF&bg=%23FFFFFF&pos=bottom-right" async></script>
   </body>
 </html>
