--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CabMate</title>
   
+  
   <link rel="icon" type="image/png" href="/pwa-192x192.png?v=2" />
   <link rel="apple-touch-icon" href="/pwa-192x192.png?v=2" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -15,6 +16,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://feedbackpulse.onrender.com/widget.js?key=fp_r1bZKdaKsm&text=Feedback&primary=%23AA64E3&textColor=%23FFFFFF&bg=%23FFFFFF&pos=bottom-right&icon=mail" async></script>
+    <script src="https://feedbackpulse.onrender.com/widget.js?key=fp_W6c0SM8DEW&text=Feedback&primary=%234B5772&textColor=%23FFFFFF&bg=%23FFFFFF&pos=bottom-right&icon=mail" async></script>
   </body>
 </html>
